[project]
name = "usaddress"
version = "0.5.11"
description = "Parse US addresses using conditional random fields"
authors = [
    {name = "Nick Crews, Forest Gregg", email = "nicholas.b.crews@gmail.com"},
]
dependencies = [
    "future>=0.14",
    "probableparsing",
    "python-crfsuite>=0.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "The MIT License: http://www.opensource.org/licenses/mit-license.php"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/datamade/usaddress"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "coverage",
    "nose",
    "requests",
    "ruff",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
source-includes = [
    "docs/",
    "justfile",
    "tests/",
    "training/",
]

